flex-wrap correction

--- a/styles.scss
+++ b/styles.scss
@@ -37,17 +37,16 @@ h3 {
 section {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
   align-items: baseline;
-  align-content: space-around;
+  justify-content: space-around;
 }
 
 .card {
   background-color: whitesmoke;
-  width: 15vw;
-  height: 45vh;
+  width: 25vw;
+  min-width: 300px;
+  height: auto;
   padding: 10px;
-  margin: 10px;
 }
 
 .card_img {
